--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "openapi:client": "openapi-typescript http://localhost:8000/openapi.json -o apps/shared/api.ts"
   },
   "devDependencies": {
-    "expo": "^53.0.12"
+    "expo": "50.0.21"
   },
   "dependencies": {
-    "expo-router": "^5.1.0",
-    "expo-status-bar": "^2.2.3",
-    "react": "^19.1.0",
-    "react-native": "^0.80.0"
+    "expo-router": "2.0.9",
+    "expo-status-bar": "~2.3.0",
+    "react": "18.3.1",
+    "react-native": "0.79.6"
   }
 }
