--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -4,6 +4,7 @@
     "slug": "gignancing-mobile",
     "version": "1.0.0",
     "sdkVersion": "50.0.0",
-    "platforms": ["ios", "android"]
+    "platforms": ["ios", "android"],
+    "entryPoint": "../../App.tsx"
   }
 }
