--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,25 +1,46 @@
 {
-  "name": "gignancing-mobile",
-  "private": true,
-  "main": "index.js",
+  "name": "mobile",
+  "main": "expo-router/entry",
+  "version": "1.0.0",
   "scripts": {
-    "start": "expo start"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll",
+    "dev": "expo start"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "50.0.21",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/native": "^6.0.2",
+    "expo": "~52.0.30",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.16",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.4",
+    "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.79.6",
-    "expo-router": "2.0.9",
-    "expo-status-bar": "~2.3.0",
-    "moti": "0.27.1",
-    "zustand": "4.5.2",
-    "expo-secure-store": "~12.2.0"
+    "react-native": "0.76.5",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "^5.4.0",
-    "@types/react": "~18.2.37",
-    "@types/react-native": "^0.73.11"
-  }
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.3.12",
+    "@types/react-test-renderer": "^18.0.7",
+    "jest": "^29.2.1",
+    "jest-expo": "~52.0.2",
+    "react-test-renderer": "18.3.1",
+    "typescript": "~5.3.3"
+  },
+  "private": true
 }
