--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "gignancing",
+  "name": "monorepo",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "bun --cwd apps/mobile start",
+    "dev": "npm --prefix apps/mobile run start",
+    "build": "npm --prefix apps/mobile run build",
+    "test": "npm run test:mobile && npm run test:services",
+    "test:mobile": "npm --prefix apps/mobile run test",
+    "test:services": "python -m pytest tests/",
     "lint": "eslint .",
-    "format": "prettier --check .",
-    "typecheck": "tsc --noEmit",
-    "test": "vitest || true && pytest && detox test -c ios.sim.debug --headless || true",
-    "qc": "bun run lint && bun run format && bun run typecheck && bun run test && ruff check services apps && isort --check services apps && black --check services apps && mypy services",
-    "openapi:client": "openapi-typescript http://localhost:8000/openapi.json -o apps/shared/api.ts"
+    "format": "prettier --write .",
+    "type-check": "npm --prefix apps/mobile run type-check"
   },
   "devDependencies": {
-    "expo": "^53.0.12"
-  },
-  "dependencies": {
-    "expo-router": "^5.1.0",
-    "expo-status-bar": "^2.2.3",
-    "react": "^19.1.0",
-    "react-native": "^0.80.0"
+    "@types/node": "^20.0.0",
+    "eslint": "^8.0.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.0.0"
   }
 }
